<resources>
    <string name="app_name">Bip4cast</string>

    <string name="no_internet">Internet connection is needed</string>

    <!-- menu -->
    <string name="profile">Profile</string>
    <string name="configuration">Configuration</string>
    <string name="information">Information</string>

    <!-- activity_main -->
    <string name="insert_pin">INSERT THE PIN</string>
    <string name="start">START</string>
    <string name="start_change">CHANGE ANSWERS</string>
    <string name="pin_error">Incorrect pin</string>

    <!-- activity_main_first_time -->
    <string name="sign_in">SIGN IN</string>
    <string name="sign_up">Sign up</string>

    <!-- register -->
    <string name="name">NAME</string>
    <string name="email">EMAIL</string>
    <string name="age">BIRTH DATE</string>
    <string name="gender">GENDER</string>
    <string name="female">FEMALE</string>
    <string name="male">MALE</string>
    <string name="pin">PIN (6 digits)</string>
    <string name="pin2">REPEAT THE PIN</string>
    <string name="terms1">I have read and agree to the</string>
    <string name="terms2">terms and conditions</string>
    <string name="register">REGISTER</string>

    <!-- register errors -->
    <string name="name_blank">The name field can\'t be blank. You can use a nickname if you don\'t want to give your real name.</string>
    <string name="email_blank">The email field can can\'t be blank. Write a real email.</string>
    <string name="email_format">The email field is not correct.</string>
    <string name="age_blank">The age field can\'t be blank.</string>
    <string name="gender_blank">You have to choose your gender</string>
    <string name="pin_format">The PIN field can\'t be blank and must have 6 digits.</string>
    <string name="pin_blank">The PIN field can\'t be blank.</string>
    <string name="pin2_format">The PIN isn\'t correct.</string>
    <string name="terms_blank">You must agree to the terms and conditions</string>
    <string name="register_error">The register couldn\'t be completed. Check that you have internet connexion and try it again later.</string>
    <string name="repeated_email">There is already a user with the email you introduced. The register couldn\'t be completed.</string>
    <string name="repeated_email2">There is already a user with the email you introduced. </string>
    <string name="wrong_data">The email or the pin is not correct.</string>
    <string name="update_error">The changes couldn\'t be saved. Check that you have internet connexion and try it again later.</string>

    <!-- finish_register_activity -->
    <string name="thanks_register">Thanks! The register has been correctly completed</string>
    <string name="register_finished">START</string>

    <!-- test_activity -->
    <string name="help">Help</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="question1">Affective state</string>
    <string name="question2">Motivation</string>
    <string name="question3">Concentration</string>
    <string name="question4">Anxiety</string>
    <string name="question5">Irritability</string>
    <string name="question6">Sleep quality</string>
    <string name="question7">Menstruation</string>
    <string name="question8">Caffeine</string>
    <string name="question9">Alcohol</string>
    <string name="question10">Cigarettes</string>
    <string name="question11">Other drugs</string>
    <string name="question12">Time to go to bed</string>
    <string name="question13">Time to sleep</string>
    <string name="question14">Time to wake up</string>

    <string name="send">SEND</string>

    <string name="test_error">You must answer all questions</string>

    <!-- help_activity -->
    <string name="help1">Resume cómo ha sido tu estado de ánimo en el día de hoy en un rango de -3  a + 3, siendo 0 la eutimia.\n\n-3 Grado máximo de depresión.\n-2 grado intermedio de depresión.\n-1 depresión leve, apenas perceptible.\n0 Eutimia o normalidad.\n1 euforia o irritabilidad leve, apenas perceptible.\n2 grado intermedio de euforia o irritabilidad.\n3 Grado máximo de euforia o irritabilidad.\n\nLa pregunta no se refiere al momento justo de realizar el test, sino a tu estado de ánimo medio a lo largo de todo el día.\nSuele ser útil tener como referencia comparativa el valor que has puesto el día anterior, señalado por la aplicación.</string>
    <string name="help2">Marca tu grado de motivación. Se refiere a las ganas de hacer cosas, la energía y la actividad que has tenido durante este día. Debes marcar entre -3 que sería una motivación muy muy baja, 0 que indicaría la actividad habitual y el 3 el grado máximo:\n\n-3 Grado mínimo de motivación.\n-2 grado intermedio de motivación.\n-1 leve disminución en la motivación, apenas perceptible.\n0 Motivación o energía media, normal.\n1 Motivación o ganas de hacer cosas un poco aumentadas.\n2 grado intermedio de motivación.\n3 Grado máximo de energía, actividad  y motivación.\n\nLa pregunta no se refiere al momento justo de realizar el test, sino a tu motivación media a lo largo de todo el día.\nSuele ser útil tener como referencia comparativa el valor que has puesto el día anterior, señalado por la aplicación.</string>
    <string name="help3">En esta escala debes marcar cómo te has concentrado y has prestado atención durante el día. Un 1 indicaría que no has tenido ningún problema y has podido concentrarte en todas las situaciones, mientras que un 5 es una total falta de concentración.\n\n1 Buena atención y concentración.\n2 Leves problemas apenas perceptibles.\n3 Problemas moderados, entre el punto 2 y el 4.\n4 Dificultades importantes, es difícil seguir una película o leer un texto.\n5 Alteración grave, imposibilidad de mantener una conversación.</string>
    <string name="help4">Indica si has tenido ansiedad, nerviosismo o angustia durante este día.\n\n1 Ausente.\n2 Leve y muy ocasional.\n3 Moderada.\n4 Grave y continua.\n5 Muy grave, incapacitante.</string>
    <string name="help5">Indica cómo has estado de irritable, impaciente o con facilidad para enfadarte durante este día. Es muy difícil ser objetivo. Si tienes dudas, puede preguntar a tus allegados.\n\n1 Muy tranquilo, inalterable, ninguna discusión.\n2 Leve tendencia a enfadarse, apenas perceptible.\n3 Moderada irritabilidad, claramente apreciable.\n4 Muy irritable, dificultades para contenerse.\n5 Irritabilidad extrema, incluso agresividad.</string>
    <string name="help6">Índica cómo has dormido esta última noche, sin tener en cuenta si has precisado medicación para dormir.\n\n1 Sueño adecuado y reparador.\n2 Leves problemas de sueño.\n3 Moderados problemas de sueño.\n4 Apenas he descansado.\n5 No he dormido nada.</string>
    <string name="help7">Indica si estás en la fase menstrual de tu ciclo.\n\nSi eres hombre no deberías contestar a esta pregunta, edita tu sexo en tu perfil.</string>
    <string name="help8">Indica la cantidad total de cafeína que has consumido hoy. Te recordamos cuánta cafeína tienen algunas bebidas:\n\nCafé 45 ml = 30\nCafé 150 ml = 90\nCafé exprés = 90\nLata de cola 330ml = 30\nTaza de té negro = 60\nLata de Red Bull 250 ml = 80</string>
    <string name="help9">Indica el número de unidades de bebida estándar (UBE) que has bebido en el día. Cada tipo de bebida tiene distintas UBE:\n\n1 vaso de vino  = 1 UBE\n1 litro de vino = 10 UBE\n1 caña = 1 UBE\n1 litro de cerveza = 5 UBE\n1 carajillo = 1 UBE\n1 copa de licor = 2 UBE\n1 combinado = 2 UBE\n1 litro de licor = 40 UBE\n1 vermut = 2 UBE</string>
    <string name="help10">Número de cigarrillos que has fumado hoy (cuéntalos desde el día de ayer a esta misma hora).</string>
    <string name="help11">Indica si has consumido durante este día drogas (sin contar alcohol, tabaco o cafeína).</string>
    <string name="help12">Hora a la que te acostaste anoche.</string>
    <string name="help13">Hora a la que te dormiste anoche.</string>
    <string name="help14">Hora a la que te despertaste esta mañana.</string>

    <string name="terms_text">Esta aplicación ha sido diseñada para estudiar el estado de ánimo en personas con trastornos afectivos, como la depresión o el trastorno bipolar. Ayuda a recoger datos diariamente sobre el estado de ánimo para enviarlos a un servidor y poder ser analizados. Su objetivo es entender mejor estas enfermedades y mejorar su tratamiento.\n\nTe recomendamos que uses la aplicación siempre en el mismo momento del día. Si tienes dudas acerca de cómo rellenar alguno de los datos consulta nuestra sección de Preguntas Frecuentes o contacta con nosotros en www.bip4cast.com</string>

    <!-- finish_activity -->
    <string name="thanks">Thanks! Your answers have been correctly sent</string>
    <string name="change">ACCEPT</string>

    <!-- profile_activity -->
    <string name="introduce_pin">INTRODUCE YOUR PIN</string>
    <string name="incorrect_pin">The pin is incorrect</string>
    <string name="save_changes">SAVE CHANGES</string>
    <string name="changes_saved">Changes have been saved</string>

    <!-- configuration_activity -->
    <string name="configuration_title">CONFIGURATION</string>
    <string name="configuration_internet">Allow to use mobile data to send information.</string>
    <string name="configuration_location">Allow to collect information about location.</string>

    <!-- information_activity -->
    <string name="version">VERSION 2.1</string>
    <string name="developed_by">Developed by Ana María Martínez Gómez in a project at UCM</string>
    <string name="see_terms">See terms and conditions</string>

</resources>
