<?xml version="1.0" encoding="utf-8"?>
    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        tools:context="${relativePackage}.${activityClass}">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin" >


            <!-- name -->
            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/name"
                android:layout_marginTop="20dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <!-- We need to use textNoSuggestions to eliminate the error when a new character is introduced -->
            <EditText
                android:id="@+id/name_answer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textCapWords|textNoSuggestions"
                android:ems="10"
                android:layout_below="@+id/name"
                android:layout_centerHorizontal="true" />

            <!-- email -->
            <TextView
                android:id="@+id/email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/email"
                android:layout_below="@+id/name_answer"
                android:layout_marginTop="30dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <EditText
                android:id="@+id/email_answer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:layout_below="@+id/email"
                android:layout_centerHorizontal="true" />

            <!-- bith date -->

            <TextView
                android:id="@+id/age"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/age"
                android:layout_below="@+id/email_answer"
                android:layout_marginTop="30dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <DatePicker
                android:id="@+id/age_answer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/age"
                android:layout_centerHorizontal="true"
                android:datePickerMode = "spinner"
                android:calendarViewShown="false"/>

            <!-- gender -->
            <TextView
                android:id="@+id/gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/gender"
                android:layout_below="@+id/age_answer"
                android:layout_marginTop="30dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <RadioGroup
                android:id="@+id/gender_answer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/gender"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="12dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radio_male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/male" />

                <RadioButton
                    android:id="@+id/radio_female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/female"
                    android:layout_marginLeft="50dp"
                    android:layout_marginStart="50dp"
                    android:checked="true" />

            </RadioGroup>

            <!-- pin -->
            <TextView
                android:id="@+id/pin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/pin"
                android:layout_below="@+id/gender_answer"
                android:layout_marginTop="23dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <EditText
                android:id="@+id/pin_answer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="numberPassword"
                android:ems="10"
                android:layout_below="@+id/pin"
                android:layout_centerHorizontal="true" />

            <TextView
                android:id="@+id/pin2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/pin2"
                android:layout_below="@+id/pin_answer"
                android:layout_marginTop="30dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <EditText
                android:id="@+id/pin2_answer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="numberPassword"
                android:ems="10"
                android:layout_below="@+id/pin2"
                android:layout_centerHorizontal="true"
                />

            <!-- terms and conditions -->
            <RelativeLayout
                android:id="@+id/terms_conditions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="31dp"
                android:layout_below="@+id/pin2_answer"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true">
                <CheckBox
                    android:id="@+id/terms_check"
                    android:text=""
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onCheckboxClicked"/>
                <TextView
                    android:id="@+id/terms_text"
                    android:layout_toRightOf="@id/terms_check"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:layout_marginLeft="5dp"
                    android:layout_centerVertical="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </RelativeLayout>

            <!-- finish button -->
            <Button
                android:id="@+id/button_finish"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:onClick="btnFinish"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="40dp"
                android:layout_below="@+id/terms_conditions"
                android:layout_centerHorizontal="true" />

        </RelativeLayout>
    </ScrollView>

