<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context="${relativePackage}.${activityClass}">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin" >

            <!-- email -->
            <TextView
                android:id="@+id/email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/email"
                android:layout_marginTop="40dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <EditText
                android:id="@+id/email_answer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:layout_below="@+id/email"
                android:layout_centerHorizontal="true" />

            <!-- pin -->
            <TextView
                android:id="@+id/pin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/pin"
                android:layout_below="@+id/email_answer"
                android:layout_marginTop="30dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <EditText
                android:id="@+id/pin_answer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="numberPassword"
                android:ems="10"
                android:layout_below="@+id/pin"
                android:layout_centerHorizontal="true" />

            <!-- finish button -->
            <Button
                android:id="@+id/button_finish"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_in"
                android:onClick="btnSignIn"
                android:layout_marginTop="65dp"
                android:layout_marginBottom="30dp"
                android:layout_below="@+id/pin_answer"
                android:layout_centerHorizontal="true" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/sign_up"
                android:onClick="btnSignUp"
                android:clickable="true"
                android:layout_below="@+id/button_finish"
                android:layout_centerHorizontal="true"
                android:textColor="@color/colorPrimary" />

        </RelativeLayout>
    </FrameLayout>
</ScrollView>
